// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleMenuViewItemGroup Collapsible Menu Context should merge custom props 1`] = `
<li>
  <List
    className="Testing"
    isDivided={false}
    onChange={[Function]}
  >
    <CollapsibleMenuViewItem
      isIconOnly={false}
      isReversed={false}
      isSelected={false}
      shouldCloseOnClick={true}
      text="Testing"
    />
    <CollapsibleMenuViewItem
      isIconOnly={false}
      isReversed={false}
      isSelected={false}
      shouldCloseOnClick={true}
      text="Testing"
    />
  </List>
</li>
`;

exports[`CollapsibleMenuViewItemGroup Collapsible Menu Context should merge custom props when selectable 1`] = `
<li>
  <MenuItemGroup
    className="Testing"
    onChange={[Function]}
  >
    <CollapsibleMenuViewItem
      isIconOnly={false}
      isReversed={false}
      isSelected={false}
      key="key1"
      shouldCloseOnClick={true}
      text="Testing"
    />
    <CollapsibleMenuViewItem
      isIconOnly={false}
      isReversed={false}
      isSelected={false}
      key="key2"
      shouldCloseOnClick={true}
      text="Testing"
    />
  </MenuItemGroup>
</li>
`;

exports[`CollapsibleMenuViewItemGroup Collapsible Menu Context should render a menu item group when selectable 1`] = `
<li>
  <MenuItemGroup
    onChange={[Function]}
  >
    <CollapsibleMenuViewItem
      isIconOnly={false}
      isReversed={false}
      isSelected={false}
      key="key1"
      shouldCloseOnClick={true}
      text="Testing"
    />
    <CollapsibleMenuViewItem
      isIconOnly={false}
      isReversed={false}
      isSelected={false}
      key="key2"
      shouldCloseOnClick={true}
      text="Testing"
    />
  </MenuItemGroup>
</li>
`;

exports[`CollapsibleMenuViewItemGroup Collapsible Menu Context should render menu items when selectedKeys is not set 1`] = `
<li>
  <List
    isDivided={false}
    onChange={[Function]}
  >
    <CollapsibleMenuViewItem
      isIconOnly={false}
      isReversed={false}
      isSelected={false}
      shouldCloseOnClick={true}
      text="Testing"
    />
    <CollapsibleMenuViewItem
      isIconOnly={false}
      isReversed={false}
      isSelected={false}
      shouldCloseOnClick={true}
      text="Testing"
    />
  </List>
</li>
`;

exports[`CollapsibleMenuViewItemGroup should merge custom props 1`] = `
<ButtonGroup
  className="face-up-item Testing"
  isBlock={false}
  selectedKeys={Array []}
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    shouldCloseOnClick={true}
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    shouldCloseOnClick={true}
    text="Testing"
  />
</ButtonGroup>
`;

exports[`CollapsibleMenuViewItemGroup should render a default component 1`] = `
<ButtonGroup
  className="face-up-item"
  isBlock={false}
  selectedKeys={Array []}
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    shouldCloseOnClick={true}
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    shouldCloseOnClick={true}
    text="Testing"
  />
</ButtonGroup>
`;

exports[`CollapsibleMenuViewItemGroup should render a selectable button group 1`] = `
<ButtonGroup
  className="face-up-item"
  isBlock={false}
  selectedKeys={
    Array [
      "key1",
    ]
  }
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    key="key1"
    shouldCloseOnClick={true}
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    key="key2"
    shouldCloseOnClick={true}
    text="Testing"
  />
</ButtonGroup>
`;
